fixed the moving truck z-index, footer and navbar height

--- a/src/pages/home-page/homepage.css
+++ b/src/pages/home-page/homepage.css
@@ -23,7 +23,8 @@
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
  gap: min(10px, 2vw);
- padding-top: 470px;
+ padding-top: 430px;
+ padding-bottom: 20px;
  padding-left: 20px;
 }
 
@@ -33,7 +34,7 @@
  display: flex;
  flex-direction: column;
  align-items: center;
- padding-top:600px;
+ padding-top:590px;
  margin-right: 30px;
 }
 
@@ -154,6 +155,7 @@
  left: 0;
  width: 100px;
  height: auto;
+ z-index: 2147483646;
  animation: moveTruck 10s linear infinite;
 }
 @keyframes moveTruck {
